--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
+    <link rel="manifest" href="/manifest.json"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Vuetify 3</title>
+    <title>NoSpend</title>
 </head>
 
 <body>
